Try to fix pre tag and line wrapping.

--- a/parser_tool/static/css/text_parsing_analysis.css
+++ b/parser_tool/static/css/text_parsing_analysis.css
@@ -10,6 +10,11 @@ pre.words {
     font-size: 18px;
     tab-size: 8; /* tab entities - &x9; or &tab; - only render in "pre" elements */
     font-family: Lato, sans-serif;
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 #textinfo {
     font-size: 125%;
